框架完善，通过scss设置全局样式

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>a12-mobile-app</title>
+    <!-- <link href="./static/css/style.css"/> -->
+    <!-- <link href="./src/assets/css/style.css"/> -->
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_656868_cg5jhib2c69ftj4i.css"/>
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   </head>
