--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>a12-mobile-app</title>
+    <title>oms2-mobile</title>
     <!-- <link href="./static/css/style.css"/> -->
     <!-- <link href="./src/assets/css/style.css"/> -->
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_656868_cg5jhib2c69ftj4i.css"/>
