添加瑞信api接口，使用方法：直接在方法中使用this.$ruixinApi

--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>oms2-mobile</title>
-    <!-- <link href="./static/css/style.css"/> -->
-    <!-- <link href="./src/assets/css/style.css"/> -->
+    
+    <!-- 阿里图标库连接 -->
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_656868_cg5jhib2c69ftj4i.css"/>
+    <!-- font-awesome图标库 -->
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+
+    <!-- 瑞信api -->
+    <script src="http://e.cnpc.com.cn:66/js/api/RuixinOpenAPI.js"></script>
+    <script>
+      // var ruixinApi=new RuixinApi();
+      function call(){
+        console.log("我在index")
+      }
+    </script>
   </head>
   <body>
     <div id="app"></div>
