报表基础页面

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>oms2-mobile</title>
+    <title>A7 A12移动版</title>
     
     <!-- 阿里图标库连接 -->
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_656868_cg5jhib2c69ftj4i.css"/>
@@ -12,12 +12,6 @@
 
     <!-- 瑞信api -->
     <script src="http://e.cnpc.com.cn:66/js/api/RuixinOpenAPI.js"></script>
-    <script>
-      // var ruixinApi=new RuixinApi();
-      function call(){
-        console.log("我在index")
-      }
-    </script>
   </head>
   <body>
     <div id="app"></div>
