--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>A7 A12移动版</title>
+    <title></title>
     
     <!-- 阿里图标库连接 -->
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_656868_cg5jhib2c69ftj4i.css"/>
