--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
   <!-- 瑞信api -->
   <script src="http://e.cnpc.com.cn:66/js/api/RuixinOpenAPI.js"></script>
+
+  <!-- echarts -->
+  <!-- <script src="./static/js/echarts.min.js"></script> -->
 </head>
 
 <body>
