测试问题修改

--- a/static/echarts/demo.html
+++ b/static/echarts/demo.html
@@ -189,11 +189,11 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h4 class="modal-title">图表显示设置</h4>
+                <h4 class="modal-title">图表显示设置1</h4>
                 </div>
                 <div class="modal-body">
-                    <!-- <div class="form-group">
-                        <label for="top" class="col-xs-4 col-sm-4 control-label">曲线监测类型</label>
+                    <div class="form-group">
+                        <label for="top" class="col-xs-4 col-sm-4 control-label">监测类型</label>
                         <div class="col-xs-8 col-sm-8">
                             <select class="form-control" onchange='handleChangeChart(this)'>
                                 <option value="1">综合数据监测</option>
@@ -201,7 +201,7 @@
                                 <option value="3">气测数据监测</option>
                             </select>
                         </div>
-                    </div> -->
+                    </div>
                 
                     <div class="form-group">
                         <label for="top" class="col-sm-4 col-xs-4 control-label">显示数量</label>
@@ -400,6 +400,8 @@
         }
         return gridArray;
     }
+
+    
 
 
     function wellNameShow(){
