--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
   <link href="http://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
   <!-- 瑞信api -->
+<!--
   <script src="http://e.cnpc.com.cn:66/js/api/RuixinOpenAPI.js"></script>
+-->
+  <!--本地瑞信api-->
+  <script src="static/ruixin/RuixinOpenAPI.js"></script>
 
   <!-- echarts -->
   <!-- <script src="./static/js/echarts.min.js"></script> -->
