修改曲线样式

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <link href="http://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
   <!-- 瑞信api -->
-  <script src="http://e.cnpc.com.cn:66/js/api/RuixinOpenAPI.js"></script>
+  <!-- <script src="http://e.cnpc.com.cn:66/js/api/RuixinOpenAPI.js"></script> -->
+  <script type="text/javascript" src="./static/js/RuixinOpenAPI.js"></script>
 
   <!-- echarts -->
   <!-- <script src="./static/js/echarts.min.js"></script> -->
