--- a/static/echarts/demo.html
+++ b/static/echarts/demo.html
@@ -15,27 +15,29 @@
     <script src="https://cdn.bootcss.com/bootstrap-datepicker/1.8.0/js/bootstrap-datepicker.min.js"></script>
     <script src="./js/vue.min.js"></script>
     <script src="./js/bootstrap-colorpicker.min.js"></script>
+    <script src="./js/RuixinOpenAPI.js"></script>
     <script src="./bundle.js"></script>
     <script src="./data/items.js"></script>
-    <script src="http://e.cnpc.com.cn:66/js/api/RuixinOpenAPI.js"></script>
+    <!-- <script src="http://e.cnpc.com.cn:66/js/api/RuixinOpenAPI.js"></script> -->
 </head>
 <body>
 <div class="container">
     <!--头部-->
     <div class="row" style="text-align: center;height: 50px;">
-        <i class="fa fa-arrow-left"  style="left: 10px;position: absolute;line-height: 50px;font-size: 20px;" onclick="back()"></i>
+        <i class="fa fa-chevron-left"  style="left: 10px;position: absolute;line-height: 50px;font-size: 20px;color:aliceblue" onclick="back()"></i>
         <i class="fa fa-fa-refresh"  style="left: 10px;position: absolute;line-height: 50px;font-size: 20px;"></i>
         <span style="color: white;padding: 0px 20px 0px 20px;line-height: 50px;font-size: 20px;font-weight: 100;" id="WellBore">当前井名</span>
-        <span style="font-size: 12px;color: black;" hidden id="width_temp">10:31</span>
+        <i class="fa fa-refresh"  style="right: 50px;position: absolute;line-height: 50px;font-size: 20px;color: #3F4889;" onclick="handleChangeHeader()"></i>
+        <i class="fa fa-cog"  style="right: 20px;position: absolute;line-height: 50px;font-size: 20px;color: #3F4889;" id="btn_chartSetting"></i>
     </div>
     <div id="myCarousel" class="carousel slide" data-interval="false">
         <div class="carousel-inner">
             <!--曲线显示部分-->
             <div class="item active">
                 <!--曲线监测页面头部-->
-                <div class="row" style="height: 50px;">
+                <div class="row" style="height: 30px;">
                     <!--日期显示-->
-                    <div style="text-align: center;height: 50px;position: relative;margin-left: auto;margin-right: auto;">
+                    <!-- <div style="text-align: center;height: 50px;position: relative;margin-left: auto;margin-right: auto;">
                         <span style="color: white;padding: 0px 20px 0px 20px;line-height: 50px;font-size: 20px;font-weight: 100;font-family: 'Microsoft YaHei UI'">
                             <i class="fa fa-chevron-left" id="dataTableExpand"></i>
                                 &nbsp;&nbsp;
@@ -45,7 +47,7 @@
                                 &nbsp;&nbsp;
                             <i class="fa fa-chevron-right" id="dataTableClose"></i>
                         </span>
-                    </div>
+                    </div> -->
                     <!--时间段显示-->
                     <!-- <div style="text-align: center">
                         <span style="font-size: 15px;font-weight: 100;font-family: 'Microsoft YaHei UI';color: #54FFFF;height: 30px;">
@@ -77,7 +79,7 @@
                 <!--曲线监测部分-->
                 <div class="row" id="charts" style="margin-left: 0px;margin-right: 0px;">
                     <p class="hidden">{{chartCount}}</p>
-                    <div class="" style="width:100%;height: 500px;" id="distChart"></div>
+                    <div class="" style="width:100%;height: 1000px;" id="distChart"></div>
                 </div>
             </div>
             <!--曲线设置部分-->
@@ -189,13 +191,13 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h4 class="modal-title">图表显示设置1</h4>
+                <h4 class="modal-title">图表显示设置</h4>
                 </div>
                 <div class="modal-body">
                     <div class="form-group">
                         <label for="top" class="col-xs-4 col-sm-4 control-label">监测类型</label>
                         <div class="col-xs-8 col-sm-8">
-                            <select class="form-control" onchange='handleChangeChart(this)'>
+                            <select class="form-control" id="selectType" onchange='handleChangeChart(this)'>
                                 <option value="1">综合数据监测</option>
                                 <option value="2">工程数据监测</option>
                                 <option value="3">气测数据监测</option>
@@ -315,6 +317,8 @@
 
     let chartType=getQueryString("typeId");
 
+    let selectChartType=1;
+
     let WELLBORE_NAME_SPLIT = "&&&&";
     let isWellInit = false;
 
@@ -323,7 +327,7 @@
 
 //    let BASE_URL ="http://"+location.host+"/websocket";
     let BASE_URL ="http://localhost:8002/websocket";
-//    let BASE_URL ="http://localhost:8090/websocket";
+    // let BASE_URL ="http://1.85.51.153:7005/websocket";
     let RUIXIN = null;
 
     /*设置container高度*/
@@ -347,6 +351,10 @@
             }
         }
         return format;
+    }
+    function handleChangeChart(objS){
+        var value = objS.options[objS.selectedIndex].value
+        selectChartType=value
     }
 
     /*获取url请求参数*/
@@ -558,7 +566,7 @@
             }(),
             series: []
         };
-        charts.setOption(option);
+        charts.setOption(option,true);
     }
 
     /*改变井筒id*/
@@ -813,9 +821,28 @@
         }
     }
 
-    function initPageButtonEvent(){
-        /*展开dataTable*/
-        $("#dataTableExpand").click(function () {
+    isDataTableExpand=true
+
+    function handleChangeHeader(){
+        if(isDataTableExpand){
+            //关闭dataTable
+            $("#dataTable").slideUp("400", "swing", function () {
+                initChartCss();
+                let option = charts.getOption();
+                option.grid.forEach(function (item, index) {
+                    item.top = 50;
+                    // item.height = $("#distChart").height() + item.top + 50;
+                    item.height = $("#distChart").height() + item.top + 50;
+                });
+                gridTop = 50;
+                option.dataZoom[0].show = true;
+                isDataZoomShow = true;
+                charts.setOption(option);
+            });
+            isDataTableExpand=false
+
+        }else{
+            //展开dataTable
             $("#dataTable").slideDown("400", "swing", function () {
                 initChartCss();
                 let option = charts.getOption();
@@ -828,24 +855,45 @@
                 isDataZoomShow = false;
                 charts.setOption(option);
             });
-        });
-        /*关闭dataTable*/
-        $("#dataTableClose").click(function () {
-            $("#dataTable").slideUp("400", "swing", function () {
-                initChartCss();
-                let option = charts.getOption();
-                option.grid.forEach(function (item, index) {
-                    item.top = 50;
-                    item.height = $("#distChart").height() + item.top + 50;
-                });
-                gridTop = 50;
-                option.dataZoom[0].show = true;
-                isDataZoomShow = true;
-                charts.setOption(option);
-            });
-        });
+            isDataTableExpand=true
 
-        $("#btn_calendarSetting").click(function () {
+        }
+
+    }
+
+    function initPageButtonEvent(){
+        /*展开dataTable*/
+        // $("#dataTableExpand").click(function () {
+        //     $("#dataTable").slideDown("400", "swing", function () {
+        //         initChartCss();
+        //         let option = charts.getOption();
+        //         option.grid.forEach(function (item, index) {
+        //             item.top = 0;
+        //             item.height = $("#distChart").height() - item.top;
+        //         });
+        //         gridTop = 0;
+        //         option.dataZoom[0].show = false;
+        //         isDataZoomShow = false;
+        //         charts.setOption(option);
+        //     });
+        // });
+        // /*关闭dataTable*/
+        // $("#dataTableClose").click(function () {
+        //     $("#dataTable").slideUp("400", "swing", function () {
+        //         initChartCss();
+        //         let option = charts.getOption();
+        //         option.grid.forEach(function (item, index) {
+        //             item.top = 50;
+        //             item.height = $("#distChart").height() + item.top + 50;
+        //         });
+        //         gridTop = 50;
+        //         option.dataZoom[0].show = true;
+        //         isDataZoomShow = true;
+        //         charts.setOption(option);
+        //     });
+        // });
+
+        $("#WellBore").click(function () {
             $('#wellBoreIdSet').modal('toggle');
         });
         $("#chartDate").text(function () {
@@ -951,6 +999,14 @@
         $("#btn_chartSettingSubmit").click((event) => {
             ChartsVue.chartCount = ChartSettingModalVue.count;
             $('#chartSetModal').modal('hide');
+
+            if(selectChartType!=chartType){
+                //修改了曲线类型
+                chartType=selectChartType
+                isInitValueRange=false
+                applyChartsSetting()
+                getFunctionProperties(selectChartType)
+            }
 
         });
         /*数据列表项的点击事件，弹出添加或者设置窗口*/
@@ -1259,7 +1315,7 @@
                     }
                 }
             })
-            this.isInitValueRange=true
+            isInitValueRange=true
 
         }
         items.forEach(function (item, index) {
