添加工程数据列表历史回放

--- a/static/echarts/demo.html
+++ b/static/echarts/demo.html
@@ -333,8 +333,8 @@
     let isSearch = false;
 
 //    let BASE_URL ="http://"+location.host+"/websocket";
-    let BASE_URL ="http://localhost:8002/websocket";
-    // let BASE_URL ="http://1.85.51.153:7005/websocket";
+    // let BASE_URL ="http://localhost:8002/websocket";
+    let BASE_URL ="http://1.85.51.153:7005/websocket";
     let RUIXIN = null;
 
     /*设置container高度*/
